syntax = "proto3";

option csharp_namespace = "RealWorldGrpc.Streaming.ChatServer";

import "google/protobuf/timestamp.proto";

package chatserver;

service ChatService {
  rpc SearchProducts (SearchProductsRequest) returns (stream SearchProductsReply);
  rpc UploadFragments (stream UploadFragmentsRequest) returns (UploadFragmentsReply);

  rpc ExchangeMessages (stream ExchangeMessagesRequest) returns (stream ExchangeMessagesReply);
}

message SearchProductsRequest {
  string criteria = 1;
}

message SearchProductsReply {
  repeated string products = 1;
}

message UploadFragmentsRequest {
  string fragment = 1;
}

message UploadFragmentsReply {
  string status = 1;
}

message ExchangeMessagesRequest {
  string nick_name = 1;
  string message = 2;
}

message SentMessage {
  google.protobuf.Timestamp sent = 1;
  string nick_name = 2;
  string message = 3;
}

message ExchangeMessagesReply {
  repeated SentMessage messages = 1;
}
